--- a/src/app/personal-rental/personal-rental.component.html
+++ b/src/app/personal-rental/personal-rental.component.html
@@ -1,4 +1,5 @@
-<mat-sidenav-container class="sidenav-container" >
+<mat-sidenav-container class="sidenav-container">
+  <h1 class="titolo"> Noleggi attivi </h1>
   <div class="table">
     <mat-table [dataSource]="activeRentalsFilms">
       <ng-container matColumnDef="title">
