--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -60,35 +60,14 @@ td {
   flex-direction: column;
 }
 
-.stile-categoria{
-  background-color: white;
-}
-
-.stile-categoria:focus,
-.stile-categoria:hover{
-  background-color: #DBDBDB;
-}
-
 .sidenav-container {
   background-color: white;
 }
 
-.table-header{
-  background-color: #f5f5f5;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
-  border-radius: 4px;
-  transition: background-color 0.3s ease;
+.titolo{
+  text-align: center;
+  color: #3f51b5;
 }
-
-
-
-
-
-
-
-
 
 
 
