--- a/src/app/past-rental/past-rental.component.html
+++ b/src/app/past-rental/past-rental.component.html
@@ -1,44 +1,40 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav-content>
-    <div class="table" *ngIf="pastRentalsFilms.length > 0; else noRentals">
-      <table mat-table [dataSource]="datasource">
-        <ng-container matColumnDef="title">
-          <th (click)="orderBy('title')" class="button-header" mat-header-cell *matHeaderCellDef>
-            <button mat-button tabindex="0">Titolo</button>
-          </th>
-          <td mat-cell *matCellDef="let film">
-            <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
-          </td>
-        </ng-container>
+  <h1 class="titolo"> Noleggi passati </h1>
+  <div class="table">
+    <table mat-table [dataSource]="datasource">
+      <ng-container matColumnDef="title">
+        <th (click)="orderBy('title')" class="button-header" mat-header-cell *matHeaderCellDef>
+          <button mat-button tabindex="0">Titolo</button>
+        </th>
+        <td mat-cell *matCellDef="let film">
+          <button (click)="openMovieDetails(film)" mat-button tabindex="0">{{ film.title }}</button>
+        </td>
+      </ng-container>
 
-        <ng-container matColumnDef="rental_date">
-          <th class="button-header" mat-header-cell *matHeaderCellDef >
-            <button (click)="orderBy('rental_date')" mat-button tabindex="0">Data di noleggio</button>
-          </th>
-          <td mat-cell *matCellDef="let film">{{ film.rental_date | date : 'dd/MM/yyyy' }}</td>
-        </ng-container>
+      <ng-container matColumnDef="rental_date">
+        <th class="button-header" mat-header-cell *matHeaderCellDef >
+          <button (click)="orderBy('rental_date')" mat-button tabindex="0">Data di noleggio</button>
+        </th>
+        <td mat-cell *matCellDef="let film">{{ film.rental_date | date : 'dd/MM/yyyy' }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="return_date">
-          <th class="button-header" (click)="orderBy('return_date')"  mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('return_date')" mat-button tabindex="0">Data di consegna</button>
-          </th>
-          <td mat-cell *matCellDef="let film">{{ film.return_date | date : 'dd/MM/yyyy' }}</td>
-        </ng-container>
+      <ng-container matColumnDef="return_date">
+        <th class="button-header" (click)="orderBy('return_date')"  mat-header-cell *matHeaderCellDef>
+          <button (click)="orderBy('return_date')" mat-button tabindex="0">Data di consegna</button>
+        </th>
+        <td mat-cell *matCellDef="let film">{{ film.return_date | date : 'dd/MM/yyyy' }}</td>
+      </ng-container>
 
-        <ng-container matColumnDef="amount">
-          <th class="button-header" mat-header-cell *matHeaderCellDef>
-            <button (click)="orderBy('amount')" mat-button tabindex="0">Costo</button>
-          </th>
+      <ng-container matColumnDef="amount">
+        <th class="button-header" mat-header-cell *matHeaderCellDef>
+          <button (click)="orderBy('amount')" mat-button tabindex="0">Costo</button>
+        </th>
 
-          <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
-        </ng-container>
+        <td mat-cell *matCellDef="let film">{{ film.amount }}€</td>
+      </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-    <ng-template #noRentals>
-      <p> Non sono presenti noleggi passati </p>
-    </ng-template>
-  </mat-sidenav-content>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
 </mat-sidenav-container>
